<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/bg_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="231dp"
        android:layout_height="171dp"
        android:layout_gravity="center_horizontal"
        android:alpha="0.8"
        android:contentDescription="@null"
        android:paddingTop="40sp"
        android:scaleType="center"
        app:srcCompat="@mipmap/logo" />
    <!--    用户名-->
    <LinearLayout
        android:id="@+id/ll_register_two_username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_register_username_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_login_username"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/UserName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_username_hint"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_line_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

    </LinearLayout>

    <!--    密码-->
    <LinearLayout
        android:id="@+id/ll_register_two_pwd"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_register_pwd_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_login_password" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/UserPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/reset_pwd_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_line_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

    </LinearLayout>

    <!--    按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_submit"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/bt_login_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_register"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/login_register_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        android:translationZ="0dp"
        tools:targetApi="lollipop" />


</LinearLayout>